<resources>
    <string name="app_name">DeviceControlDemo</string>
    <string name="reboot">重启</string>
    <string name="shutdown">关机</string>
    <string name="recovery">恢复出厂设置</string>
    <string name="set_time">设置系统时间</string>
    <string name="create_apn">创建APN</string>
    <string name="uninstall">卸载app</string>
    <string name="install">安装app</string>
    <string name="pkg_name">卸载apk包名</string>
    <string name="apk_name">安装apk名称</string>
    <string name="set_apn">设置apn</string>
</resources>
