<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.speedata.control.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_reboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot"/>

        <Button
            android:id="@+id/btn_shutdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shutdown"/>

        <Button
            android:id="@+id/btn_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovery"/>

        <Button
            android:id="@+id/btn_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time"/>

        <Button
            android:id="@+id/btn_create_apn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_apn"/>

        <EditText
            android:id="@+id/et_pkg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pkg_name"/>

        <Button
            android:id="@+id/btn_uninstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uninstall"/>

        <EditText
            android:id="@+id/et_apk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apk_name"/>

        <Button
            android:id="@+id/btn_install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/install"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
